--- a/index.html
+++ b/index.html
@@ -51,24 +51,28 @@
 				<section data-background-image="https://user-images.githubusercontent.com/61646760/191900619-957216a8-5677-44ee-8147-db61d5329a3f.png" data-background-size="contain">
 					<h3 style="font-family: 'Gowun Dodum', 'Yuji Syuku';">목차</h3>
 					<ol>
-						<li>서버, 프론트엔드, 백엔드</li>
+						<!-- <li>서버, 프론트엔드, 백엔드</li>
 						<ol>
 							<li>서버</li>
 							<li>프론트엔드</li>
 							<li>백엔드</li>
-						</ol>
-						<li>AWS의 이해와 실습</li>
+						</ol> -->
+						<li>AWS 입문</li>
 						<ol>
-							<li>AWS와 비용 정책<a href="#비용정책">#</a></li>
+							<li>AWS의 이해<a href="#이해">#</a></li>
+							<li>AWS 비용 정책<a href="#비용정책">#</a></li>
+						</ol>
+						<li>AWS 실습</li>
+						<ol>
 							<li>AWS 회원 가입<a href="#회원가입">#</a></li>
-							<li>Lightsail 인스턴스 생성<a href="#인스턴스">#</a></li>
+							<li>EC2 인스턴스 생성<a href="#인스턴스">#</a></li>
 							<li>인스턴스 고정 IP 생성<a href="#고정IP">#</a></li>
-							<li>웹 SSH로 서버 접속<a href="#SSH">#</a></li>
+							<li>웹 SSH 서버 접속 및 서버 설정<a href="#SSH">#</a></li>
 						</ol>
 					</ol>	
 				</section>
 
-				<section id="서버" data-transition="fade" data-background-image="https://user-images.githubusercontent.com/61646760/191900619-957216a8-5677-44ee-8147-db61d5329a3f.png" data-background-size="contain">
+				<!-- <section id="서버" data-transition="fade" data-background-image="https://user-images.githubusercontent.com/61646760/191900619-957216a8-5677-44ee-8147-db61d5329a3f.png" data-background-size="contain">
 					<section>
 						<h3 style="font-family: 'Gowun Dodum', 'Yuji Syuku';">서버, 프론트엔드, 백엔드</h3>
 						<ul>
@@ -147,11 +151,11 @@
 						<h3 style="font-family: 'Gowun Dodum', 'Yuji Syuku';">서버, 프론트엔드, 백엔드</h3>
 						<img class="fragment" src="img/server04.png" height="450" />
 					</section>
-				</section>
-				
-				<section id="비용정책" data-transition="fade" data-background-image="https://user-images.githubusercontent.com/61646760/191900619-957216a8-5677-44ee-8147-db61d5329a3f.png" data-background-size="contain">
+				</section> -->
+
+				<section id="이해" data-transition="fade" data-background-image="https://user-images.githubusercontent.com/61646760/191900619-957216a8-5677-44ee-8147-db61d5329a3f.png" data-background-size="contain">
 					<section>
-						<h3 style="font-family: 'Gowun Dodum', 'Yuji Syuku';">AWS와 비용 정책</h3>
+						<h3 style="font-family: 'Gowun Dodum', 'Yuji Syuku';">AWS의 이해</h3>
 						<ul>
 							<li class="fragment"><strong>AWS</strong>란?
 								<ul class="fragment">
@@ -187,6 +191,9 @@
 							</li>
 						</ul>
 					</section>
+				</section>
+				
+				<section id="비용정책" data-transition="fade" data-background-image="https://user-images.githubusercontent.com/61646760/191900619-957216a8-5677-44ee-8147-db61d5329a3f.png" data-background-size="contain">
 					<section>
 						<h3 style="font-family: 'Gowun Dodum', 'Yuji Syuku';">AWS와 비용 정책</h3>
 						<ul>
@@ -306,9 +313,9 @@
 
 				<section id="인스턴스" data-transition="fade" data-background-image="https://user-images.githubusercontent.com/61646760/191900619-957216a8-5677-44ee-8147-db61d5329a3f.png" data-background-size="contain">
 					<section>
-						<h3 style="font-family: 'Gowun Dodum', 'Yuji Syuku';">Lightsail 인스턴스 생성</h3>
+						<h3 style="font-family: 'Gowun Dodum', 'Yuji Syuku';">EC2 인스턴스 생성</h3>
 						<ul>
-							<li class="fragment">서버는 어떻게 만들까?
+							<li class="fragment">EC2 인스턴스로 개인 서버 구축
 								<ul class="fragment">
 									<div style="text-align: center;"><img src="https://user-images.githubusercontent.com/61646760/199002816-35f09a8d-4eb5-486a-8386-254724ee806d.png" height="180" /></div>
 									<li>사용자의 요청에 매번 응답해 줄 수 있으면 그게 서버!</li>
@@ -321,64 +328,77 @@
 						</ul>
 					</section>
 					<section>
-						<h3 style="font-family: 'Gowun Dodum', 'Yuji Syuku';">Lightsail 인스턴스 생성</h3>
+						<h3 style="font-family: 'Gowun Dodum', 'Yuji Syuku';">EC2 인스턴스 생성</h3>
 						<ul>
-							<li class="fragment"><strong>Lightsail</strong>이란?
+							<li class="fragment"><strong>Amazon EC2</strong>란?
 								<ul class="fragment">
-									<div style="text-align: center;"><img src="https://user-images.githubusercontent.com/61646760/197378882-a01019ef-af92-455d-9ccc-91693f052056.png" height="130" /></div>
-									<li>원격으로 접속할 수 있는 컴퓨터(서버)를 한 대 빌려주는 AWS 서비스 (가상 프라이빗 서버: VPS)</li>
-									<li>비슷한 기존 서비스인 EC2에 비해 <strong>저렴한 비용</strong>과 <strong>손쉬운 세팅</strong>이 가능한 입문자용 서비스</li>
+									<div style="text-align: center;"><img src="https://user-images.githubusercontent.com/61646760/217162616-eb35a992-9347-4837-bfcd-25cc08bcd56e.png" height="130" /></div>
+									<li>Amazon Elastic Compute Cloud</li>
+									<li>원격으로 접속할 수 있는 독립된 컴퓨터(서버) 한 대를 빌려주는 아마존 웹 서비스(AWS)</li>
 									<li>내 컴퓨터를 서버로 쓰려면 종일 컴퓨터를 켜 놔야 하지만 <strong>클라우드 서버</strong>가 있다면? 상시 서비스 가능!</li>
 								</ul>
 							</li>
 						</ul>
 					</section>
 					<section>
-						<img src="img/aws12.png" />
-						<p>1. 로그인 시 자동으로 뜨는 서버 조작 화면(콘솔 홈)</p>
+						<img src="img/ec2_00.png" />
+						<p>1. 로그인 시 뜨는 서버 조작 화면(콘솔 홈) - 지역 설정</p>
 					</section>
 					<section>
-						<img src="img/aws14.png" />
-						<p>2. 상단에서 Lightsail 검색하여 클릭</p>
+						<img src="img/ec2_01.png" />
+						<p>2. 상단에서 EC2 검색하여 클릭</p>
 					</section>
 					<section>
-						<img src="img/aws15.png" />
-						<p>3. Lightsail 우측 하단 English를 눌러 한국어로 변경</p>
+						<img src="img/ec2_02.png" />
+						<p>3. <strong>인스턴스 시작</strong> 클릭</p>
 					</section>
 					<section>
-						<img src="img/aws16.png" />
-						<p>4. 화면 중앙의 <strong>인스턴스 생성</strong> 클릭</p>
+						<img src="img/ec2_03.png" />
+						<p>4. 인스턴스 이름 입력 (e.g. 위키용 서버)</p>
 					</section>
 					<section>
-						<img src="img/aws17.png" />
-						<p>5. 플랫폼(Linux/Unix), 블루프린트(LAMP) 선택</p>
+						<img src="img/ec2_04.png" />
+						<p>5. 애플리케이션 및 OS 이미지 - <strong>Ubuntu</strong> 선택</p>
 					</section>
 					<section>
-						<ul>
-							<li>LAMP를 택하는 이유?</li>
-							<ul>
-								<li class="fragment">LAMP란?
-									<ul>
-										<img src="https://user-images.githubusercontent.com/61646760/199017768-697ebbbe-f117-4855-a0ae-28bc0cc2cc70.png" height="230" />
-										<li><strong>L</strong>inux + <strong>A</strong>pache + <strong>M</strong>ySQL(MariaDB) + <strong>P</strong>HP</li>
-										<li>Linux는 운영체제, Apache는 웹 서버 운영에 필요, MySQL은 데이터 처리용, PHP는 서버용 언어</li>
-									</ul>
-								</li>
-								<li class="fragment">위키를 사용하기 위한 기본 세팅!</li>
-							</ul>
-						</ul>
+						<img src="img/ec2_05.png" />
+						<p>6. 인스턴스 유형 - <strong>t2.micro</strong> 선택 (프리 티어 사용 가능)</p>
 					</section>
 					<section>
-						<img src="img/aws18.png" />
-						<p>6. 인스턴스 플랜 선택 및 인스턴스 이름 입력</p>
+						<img src="img/ec2_06.png" />
+						<p>7. <strong>새 키 페어 생성</strong> 클릭</p>
 					</section>
 					<section>
-						<img src="img/aws19.png" />
-						<p>7. <strong>인스턴스 생성</strong> 클릭</p>
+						<img src="img/ec2_07.png" height="520" />
+						<p>8. 키 페어 이름 입력 - 키 페어 유형 및 형식 선택</p>
 					</section>
 					<section>
-						<img src="img/aws20.png" />
-						<p>8. 인스턴스 생성 진행 중 (컬러가 되면 완료)</p>
+						<img src="img/ec2_08.png" />
+						<p>9. 키 페어 pem 파일 다운로드 확인</p>
+					</section>
+					<section>
+						<img src="img/ec2_09.png" />
+						<p>10. 보안 그룹 생성 및 설정 체크</p>
+					</section>
+					<section>
+						<img src="img/ec2_10.png" />
+						<p>11. 스토리지 구성 초기 설정 그대로 두기</p>
+					</section>
+					<section>
+						<img src="img/ec2_11.png" />
+						<p>12. 인스턴스 시작 클릭</p>
+					</section>
+					<section>
+						<img src="img/ec2_12.png" />
+						<p>13. 인스턴스 시작 완료</p>
+					</section>
+					<section>
+						<img src="img/ec2_13.png" />
+						<p>14. 결제 알림 생성 클릭</p>
+					</section>
+					<section>
+						<img src="img/ec2_14.png" />
+						<p>15. 혹여 모를 지출을 방지하기 위한 알림 설정</p>
 					</section>
 				</section>
 
@@ -396,49 +416,57 @@
 									<li>IP 주소는 숫자로 되어 있으므로 편의를 위해 <strong>도메인 이름(domain name)</strong>을 사용</li>
 									<ul>
 										<li>네이버 도메인 이름 : <a href="http://naver.com">naver.com</a></li>
-										<li>도메인 네임 구매 방법은 부록 참고!</li>
+										<li>도메인 네임 구매 방법?</li>
 									</ul>
 								</ul>
-								<li class="fragment">라이트세일 고정 IP 설정 방법은 아래 슬라이드 참고</li>
+								<li class="fragment">EC2 고정 IP 설정 방법은 아래 슬라이드 참고</li>
 							</li>
 						</ul>
 					</section>
 					<section>
-						<img src="img/aws21.png" />
-						<p>1. 생성된 인스턴스 클릭</p>
+						<img src="img/ec2_15.png" />
+						<p>1. 좌측 상단의 三 모양 버튼 클릭</p>
 					</section>
 					<section>
-						<img src="img/aws22.png" />
-						<p>2. 해당 인스턴스 설정 화면</p>
+						<img src="img/ec2_16.png" />
+						<p>2. 네트워크 및 보안 - <strong>탄력적 IP</strong> 클릭</p>
 					</section>
 					<section>
-						<img src="img/aws23.png" />
-						<p>3. <strong>네트워킹</strong> 버튼 클릭</p>
+						<img src="img/ec2_17.png" />
+						<p>3. <strong>탄력적 IP 주소 할당</strong> 버튼 클릭</p>
 					</section>
 					<section>
-						<img src="img/aws24.png" />
-						<p>4. <strong>고정 IP 생성</strong> 클릭</p>
+						<img src="img/ec2_18.png" />
+						<p>4. <strong>할당</strong> 버튼 클릭</p>
 					</section>
 					<section>
-						<img src="img/aws25.png" />
-						<p>5. 생성한 인스턴스에 연결 후 생성 버튼 클릭</p>
+						<img src="img/ec2_19.png" />
+						<p>5. 할당된 IPv4 주소 아래 IP 주소 클릭</p>
 					</section>
 					<section>
-						<img src="img/aws26.png" />
-						<p>6. 고정 IP 생성 및 연결 완료</p>
+						<img src="img/ec2_20.png" />
+						<p>6. <strong>탄력적 IP 주소 연결</strong> 버튼 클릭</p>
+					</section>
+					<section>
+						<img src="img/ec2_21.png" />
+						<p>7. 인스턴스, 프라이빗 IP 주소 공란 눌러 선택 후 연결 클릭</p>
+					</section>
+					<section>
+						<img src="img/ec2_22.png" />
+						<p>8. 탄력적 IP 주소 연결 완료</p>
 					</section>
 				</section>
 
 				<section id="SSH" data-transition="fade" data-background-image="https://user-images.githubusercontent.com/61646760/191900619-957216a8-5677-44ee-8147-db61d5329a3f.png" data-background-size="contain">
 					<section>
-						<h3 style="font-family: 'Gowun Dodum', 'Yuji Syuku';">웹 SSH로 서버 접속</h3>
+						<h3 style="font-family: 'Gowun Dodum', 'Yuji Syuku';">웹 SSH 서버 접속 및 설정</h3>
 						<ul>
 							<li class="fragment"><strong>SSH</strong>란?
 								<ul class="fragment">
 									<li>보안 셸(Secure SHell)</li>
 									<ul>
-										<li>셸 = 검은 화면</li>
-										<li>보안 셸 = 안전한 검은 화면</li>
+										<li>셸 = 컴퓨터에게 명령하기 위한 검은 화면</li>
+										<li>보안 셸 = 암호를 사용하여 보다 안전한 셸</li>
 									</ul>
 									<li><strong>서버에 안전하게 접속</strong>하기 위해, 사용자와 서버 간에 사용하는 비밀 언어(프로토콜)</li>
 									<img src="https://user-images.githubusercontent.com/61646760/199004624-5b0aac63-d9b6-416d-aad9-760dce7e8a5d.png" height="170" />
@@ -454,12 +482,67 @@
 						</ul>
 					</section>
 					<section>
-						<img src="img/aws27.png" />
-						<p>1. 인스턴스에서 <strong>SSH를 사용하여 연결</strong> 클릭</p>
+						<img src="img/ec2_23.png" />
+						<p>1. 인스턴스에서 <strong>인스턴스 ID</strong> 클릭</p>
 					</section>
 					<section>
-						<img src="img/aws28.png" height="480" />
-						<p>2. 인스턴스 서버 접속 완료</p>
+						<img src="img/ec2_24.png" />
+						<p>2. <strong>연결</strong> 버튼 클릭</p>
+					</section>
+					<section>
+						<img src="img/ec2_25.png" />
+						<p>3. <strong>연결</strong> 버튼 클릭</p>
+					</section>
+					<section>
+						<img src="img/ec2_26.png" height="500" />
+						<p>4. 웹 SSH 접속 완료</p>
+					</section>
+					<section>
+						<img src="img/ec2_27.png" />
+						<p>5. sudo apt-get update 입력</p>
+					</section>
+					<section>
+						<img src="img/ec2_28.png" />
+						<p>6. sudo apt-get upgrade 입력</p>
+					</section>
+					<section>
+						<img src="img/ec2_29.png" height="460" />
+						<p>7. sudo apt-get install apache2 mysql-server php php-mysql libapache2-mod-php php-xml php-mbstring 입력</p>
+					</section>
+					<section>
+						<ul>
+							<li>왜 이런 것들을 설치하나요?</li>
+							<ul>
+								<li class="fragment">LAMP란?
+									<ul>
+										<img src="https://user-images.githubusercontent.com/61646760/199017768-697ebbbe-f117-4855-a0ae-28bc0cc2cc70.png" height="230" />
+										<li><strong>L</strong>inux + <strong>A</strong>pache + <strong>M</strong>ySQL(MariaDB) + <strong>P</strong>HP</li>
+										<li>Linux는 운영체제, Apache는 웹 서버 운영에 필요, MySQL은 데이터 처리용, PHP는 서버용 언어</li>
+									</ul>
+								</li>
+								<li class="fragment">위키를 사용하기 위한 기본 세팅!</li>
+							</ul>
+						</ul>
+					</section>
+					<section>
+						<img src="img/ec2_30.png" />
+						<p>8. Do you want to continue?가 뜨면 Y 입력</p>
+					</section>
+					<section>
+						<img src="img/ec2_31.png" />
+						<p>9. sudo service apache2 start 입력</p>
+					</section>
+					<section>
+						<img src="img/ec2_32.png" />
+						<p>10. sudo systemctl status apache2 입력</p>
+					</section>
+					<section>
+						<img src="img/ec2_33.png" />
+						<p>11. Active: active (running) 이면 세팅 완료</p>
+					</section>
+					<section>
+						<img src="img/ec2_34.png" />
+						<p>12. 웹 브라우저 주소 창에 퍼블릭 IP 주소 입력 후 확인</p>
 					</section>
 				</section>
 
@@ -469,7 +552,7 @@
 				</section> -->
 
 				<section id="질의응답" data-transition="slide" data-background-image="https://user-images.githubusercontent.com/61646760/191900619-957216a8-5677-44ee-8147-db61d5329a3f.png" data-background-size="contain">
-					<h2 style="font-family: 'Gowun Dodum', 'Yuji Syuku';">질의응답</h2>
+					<h2 style="font-family: 'Gowun Dodum', 'Yuji Syuku';">감사합니다</h2>
 				</section>
 			</div>
 
